--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -910,6 +910,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
   display:inline-block;
 }
 
+.controller_neighbourhoods .popover.bottom {
+  margin-top: 10px;
+}
+
 
 /* ============================= */
 /* ! Layout for mobile version   */
