Add staging to title

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,7 +5,7 @@
         =link_to "/" do
           =image_tag "logo.png"
           %span
-            Neighbours Can Help
+            Neighbours Can Help Staging
     .span7
       #header-links        
         -if current_user
