--- a/app/views/users/validate.js.erb
+++ b/app/views/users/validate.js.erb
@@ -1,2 +1,3 @@
+$('button.close:visible').click()
 $("#choose-community-champion").html('<%= escape_javascript (render("modals/community_champion", :locals => { :user => @user }))%>');
 $('#choose-community-champion').modal('show');
