--- a/app/views/needs/show.html.haml
+++ b/app/views/needs/show.html.haml
@@ -14,7 +14,7 @@
           ="#{@need.user} has accepted someone else's offer."
 .row
   .span2
-    =link_to @need.user, :rel => 'tooltip', :title => (@need.user.street_name if current_user.try(:validated?)), :class => "user-thumbnail-large pull-left" do
+    =link_to (can?(:read,@need.user) ? @need.user : '#'), :rel => 'tooltip', :title => (@need.user.street_name if current_user.try(:validated?)), :class => "user-thumbnail-large pull-left" do
       =image_for_with_validation(@need.user, "120x120#")
       %p=@need.user
   .span8
@@ -67,7 +67,7 @@
           -@offers.each do |offer|
             %li.span1
               .list-image.thumbnail
-                =link_to offer.user, :rel => 'tooltip', :title => (offer.user.street_name if current_user.try(:validated?)), :class => "pull-left" do
+                =link_to (can?(:read,offer.user) ? offer.user : '#'), :rel => 'tooltip', :title => (offer.user.street_name if current_user.try(:validated?)), :class => "pull-left" do
                   =image_for_with_validation(offer.user, "60x60#")
                   %p.small-text
                     =offer.user
