Link to contact form from user#edit when can't edit name, address

--- a/app/views/users/tabs/_where_you_live.html.haml
+++ b/app/views/users/tabs/_where_you_live.html.haml
@@ -1,6 +1,3 @@
-%p.mb-3
-  Next, we need to know where you live in
-  =neighbourhood
 =form.hidden_field :current_step, :value => "where_you_live"
 =form.inputs(:class => "form-horizontal") do
   =form.input :current_step, :as => :hidden, :value => "where_you_live"
@@ -9,7 +6,10 @@
     =form.input :street_name, :label => false, :required => false, :input_html => {:placeholder => "Street name"}
     =form.input :city, :label => false, :required => false, :input_html => {:placeholder => "Town/city"}
     =form.input :postcode, :label => false, :required => false, :input_html => {:placeholder => "Postcode", :class => "span2"}
-  -else
-    %em
-      Contact us if you need to change your address
   =form.input :phone, :label => "Phone number <br /><em class='optional'>(optional)</em>".html_safe, :required => false, :input_html => {:placeholder => "e.g. 0114 123123"}
+  -unless current_user.admin?
+    .control-group
+      .controls
+        %p
+          =link_to("Contact us", feedback_path, :target => '_blank')
+          if you need to change your address.
