--- a/app/views/pages/views/basic.html.haml
+++ b/app/views/pages/views/basic.html.haml
@@ -9,6 +9,8 @@
     .span8
       =contentize(@page.text)
     .span8
+      =link_to("Let us know what you think",feedback_path)
+    .span8
       =options_panel do
         =link_if_can("Edit page", [:edit, @page])
         =link_if_can("Delete page", [:destroy, @page], :confirm => "Are you sure?") unless @page.slug.present?
