--- a/app/views/registrations/steps/_where_you_live.html.haml
+++ b/app/views/registrations/steps/_where_you_live.html.haml
@@ -4,8 +4,9 @@
 =form.hidden_field :current_step, :value => "where_you_live"
 =form.inputs(:class => "form-horizontal") do
   =form.input :current_step, :as => :hidden, :value => "where_you_live"
-  =form.input :house_number, :label => "Address", :required => false, :input_html => {:placeholder => "House number or name"}, :help => "We will only show your address to people that want to help you."
-  =form.input :street_name, :label => false, :required => false, :input_html => {:placeholder => "Street name"}
+  %label.control-label#address-label Address
+  =form.input :house_number, :label => "Number", :required => false, :input_html => {:placeholder => "34", :class => "span1"}
+  =form.input :street_name, :label => "Street name", :required => false, :input_html => {:placeholder => "Street name", :class => "span4"}, :help => "We will only show your address to people that want to help you."
   =form.input :city, :label => false, :required => false, :input_html => {:placeholder => "Town/city", :value => @user.city}
   =form.input :postcode, :label => false, :required => false, :input_html => {:placeholder => "Postcode", :class => "span2"}
   =form.input :phone, :label => "Phone number <br /><em class='optional'>(optional)</em>".html_safe, :required => false, :input_html => {:placeholder => "e.g. 0114 123123"}, :help => "This is optional but will help if we need to contact you. We promise to keep this private."
