--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -9,7 +9,10 @@
           -if STAGING
             %span.badge.badge-warning Staging
     .span7
-      #header-links        
+      #header-links
+        #help-links
+          %icon.icon-question-sign
+          =link_to_slug(:help, :class=>"nav-link")
         -if current_user
           .btn-group
             =link_to(current_user, :class => 'btn') do
@@ -57,16 +60,17 @@
           %ul.nav.nav-tabs
             =li_with_active(current_page?(root_path), link_to("Home", root_path, :class=>"nav-link"))
             =li_with_active(@page && @page.slug == "about", link_to_slug(:about, :class=>"nav-link"))
-            =li_with_active(@page && @page.slug == "blog", link_to_slug(:blog, :class=>"nav-link"))
             -if current_user
               -if current_user.is_in_maltby?
-                =li_with_active(controller_name.neighbourhoods?, link_to("My Neighbourhood", neighbourhood_path, :class=>"nav-link"))
+                =li_with_active(controller_name.neighbourhoods?, link_to("Neighbourhood", neighbourhood_path, :class=>"nav-link"))
               -else
-                =li_with_active(current_page?(feedback_path), link_to("My Neighbourhood", other_neighbourhood_path, :class => "nav-link"))            
+                =li_with_active(current_page?(feedback_path), link_to("Neighbourhood", other_neighbourhood_path, :class => "nav-link"))            
             -else
-              =li_with_active(controller_name.neighbourhoods?, link_to("My Neighbourhood", "#register-popup", :class=>"home-help-link", :'data-toggle' => 'modal'))
-            =li_with_active(current_page?(feedback_path), link_to("Contact Us", feedback_path, :class => "nav-link"))
-            =li_with_active(@page && @page.slug == "help", link_to_slug(:help, :class=>"nav-link"))
+              =li_with_active(controller_name.neighbourhoods?, link_to("Neighbourhood", "#register-popup", :class=>"home-help-link", :'data-toggle' => 'modal'))
+            =li_with_active(@page && (@page.slug == "blog" || @page.descendant_of_slug("blog")), link_to_slug(:blog, :class=>"nav-link"))
+            =li_with_active(@page && @page.root_slug == "stories", link_to_slug(:stories, :class=>"nav-link"))
+            =li_with_active(current_page?(feedback_path), link_to("Contact", feedback_path, :class => "nav-link"))
+            =#li_with_active(@page && @page.slug == "help", link_to_slug(:help, :class=>"nav-link"))
           
 -if show_control_panel?
   .container
