Logged out users can see the same as unvalidated users, home page is now neighbourhood

--- a/app/views/enquiries/new.html.haml
+++ b/app/views/enquiries/new.html.haml
@@ -5,4 +5,4 @@
     %p.well.help-text
       %i.icon-info-sign
       =@enquiry.form_intro
-  =render("form", :enquiry => @enquiry)
+  =render("enquiries/form", :enquiry => @enquiry)
