--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -43,12 +43,13 @@
   -webkit-animation-iteration-count: 1;
 }
 
-.fade_in.fade_one{-webkit-animation-delay: 0, 0;}
-.fade_in.fade_two {-webkit-animation-delay: 0, 0.2s;}
-.fade_in.fade_three {-webkit-animation-delay: 0, 0.4s;}
-.fade_in.fade_four  {-webkit-animation-delay: 0, 0.6s;}
-.fade_in.fade_five  {-webkit-animation-delay: 0, 0.8s;}
-.fade_in.fade_six {-webkit-animation-delay: 0, 1s;}
+.fade_in.fade_1{-webkit-animation-delay: 0, 0;}
+.fade_in.fade_2 {-webkit-animation-delay: 0, 0.2s;}
+.fade_in.fade_3 {-webkit-animation-delay: 0, 0.4s;}
+.fade_in.fade_4  {-webkit-animation-delay: 0, 0.6s;}
+.fade_in.fade_5  {-webkit-animation-delay: 0, 0.8s;}
+.fade_in.fade_6 {-webkit-animation-delay: 0, 1s;}
+.fade_in.fade_7 {-webkit-animation-delay: 0, 1s;}
 
 .main-nav a  {
 	    
@@ -336,9 +337,7 @@ br.clear {
   color:#333;
 }
 .homepage-box {
-   background: #f5f5f5;
-
-
+  background: #f5f5f5;
   padding: 20px;
   height: 260px;
   
@@ -367,6 +366,11 @@ br.clear {
 }
 .homepage-box-title a {
   color: inherit;
+}
+
+#map-canvas {
+  margin-bottom: 30px;
+  height: 320px;
 }
 
 
@@ -466,6 +470,8 @@ border-bottom-color: #b08193;
   line-height: 40px;
   border-radius:40px;
   font-size: 22px;
+  color:white;
+  text-decoration:none;
 }
 .circle1 {
   background: #f8bb61;
@@ -476,7 +482,7 @@ border-bottom-color: #b08193;
 .circle3 {
   background: #8bd7dd;
 }
-.circle4 {
+.circle4, .circle5, .circle6, .circle7 {
   background: #b08193;
 }
 
