Change report message

--- a/app/views/flags/_modal_form.html.haml
+++ b/app/views/flags/_modal_form.html.haml
@@ -3,7 +3,7 @@
   =form.hidden_field :resource_id
   .modal-header
     %button.close{:type => "button", :'data-dismiss' => "modal" } &times;
-    %h3 Report this entry as inappropriate
+    %h3 Report this page as inappropriate
   .modal-body
     =form.input :text, :input_html => {:class => "span6", :rows => 5}, :label => "Add an optional message", :required => false
   .modal-footer
