--- a/app/views/needs/show.html.haml
+++ b/app/views/needs/show.html.haml
@@ -76,7 +76,7 @@
       =link_if_can("Delete this request", @request, :method => :delete, :confirm => "Are you sure?", :class => "btn btn-danger")
       =link_to("#inappropriate", :data => {:toggle => "modal"}) do
         %i.icon-warning-sign
-        Report this entry as inappropriate
+        Report this page as inappropriate
 
 -if @need.user != current_user
   #offer-form.modal.hide.fade
