--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -419,16 +419,10 @@ br.clear {
 	margin: -30px 0 15px 70px; 
 	box-shadow:1px 1px 10px rgba(0,0,0,0.1), 1px 1px 1px rgba(0,0,0,0.3);
 }
-
-.home-help-links {
-	margin: 0 0 40px 270px;
-  float:left;
-  clear:both;
-}
 .home-help-link {
 	float: left;
-	margin-right: 40px;
-	color: #999;
+	margin: 0 0 40px 120px;
+	color: #333;
 	border-bottom: 1px solid #f5f5f5;
 }
 .home-help-link:hover {
@@ -494,25 +488,25 @@ border-bottom-color: #b08193;
 	left: 267px;  
 }
 #circle2 {
-	top: 260px;
-	left: 507px;  
-}
-#circle3 {
 	top: 140px;
 	left: 467px;  
 }
-#circle4 {
+#circle3 {
 	top: 190px;
 	left: 647px;  
 }
+#circle4 {
+  	top: 220px;
+  	left: 130px;  
+  	background: #cf646d;
+  }
 #circle5 {
 	top: 230px;
 	left: 317px;  
 }
 #circle6 {
-	top: 220px;
-	left: 130px;  
-	background: #cf646d;
+	top: 260px;
+	left: 507px;  
 }
 #circle7 {
 	top: 260px;
@@ -997,6 +991,31 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
   margin-top: 10px;
 }
 
+/*************** community champion  ********************/
+.post-private-checkbox .controls .checkbox {
+  font-size: 12px;
+  line-height: 14px;
+  margin-right: 10px;
+}
+
+.modal dl {
+  margin-top:0px;
+}
+
+/*========== Neighbourhood page ==========*/
+.help-list-wrapper {
+  position: relative;
+  overflow: hidden;
+  height: 450px;
+  width: 100%;
+}
+.help-list-wrapper .help-list {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+
 
 /* ============================= */
 /* ! Layout for mobile version   */
@@ -1048,6 +1067,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
 }
 
 
+
 }
 
 @media handheld, only screen and (max-width: 719px)  {
@@ -1073,15 +1093,4 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
 		background-size: 212px 303px;
 	}*/
 
-}
-
-/*************** community champion  ********************/
-.post-private-checkbox .controls .checkbox {
-  font-size: 12px;
-  line-height: 14px;
-  margin-right: 10px;
-}
-
-.modal dl {
-  margin-top:0px;
 }
