--- a/app/views/needs/index.html.haml
+++ b/app/views/needs/index.html.haml
@@ -23,15 +23,18 @@
           .list-text
             %h3
               =link_to_self(need)
-            -if current_user.validated?
+            -if current_user && current_user.validated?
               =simple_format(need.description)
             -else
               =simple_format(need.category.description)
-          -if current_user.validated?
+          -if current_user && current_user.validated?
             =link_to "I can help", need, :class=>"btn i-can-help-btn"
-          -else
+          -elsif current_user
             =link_to "I can help", "#not-validated", :class=>"btn i-can-help-btn", :'data-toggle' => "modal"
+          -else
+            =link_to "I can help", "#register-popup", :class=>"btn i-can-help-btn", :'data-toggle' => "modal"
     .clearfix
 
 
 =render "modals/not_validated"
+=render "modals/register_popup"
