--- a/app/views/admin/index.html.haml
+++ b/app/views/admin/index.html.haml
@@ -34,3 +34,10 @@
         Inappropriate content
       %ul.unstyled
         %li=link_to "View inappropriate content", flags_path
+  .span4
+    .well
+      %h2
+        %i.icon-list
+        Site snippets
+      %ul.unstyled
+        %li=link_to "View snippets", snippets_path
