Editable text in registrations#form

--- a/app/views/registrations/steps/_who_you_are.html.haml
+++ b/app/views/registrations/steps/_who_you_are.html.haml
@@ -1,5 +1,6 @@
 %p.mb-3
-  First, please tell us who you are.
+  =snippet_text(:reg_form_intro)
+  =edit_snippet_link(:reg_form_intro)
 =form.hidden_field :current_step, :value => "who_you_are"
 =form.inputs(:class => "form-horizontal") do
   =form.input :first_name, :required => false, :help => "Enter your first name", :input_html => {:placeholder => "e.g. John"}
