--- a/app/views/users/_table.html.haml
+++ b/app/views/users/_table.html.haml
@@ -50,6 +50,7 @@
         .modal-footer
           =link_to "Delete user", user_path(user), :class => 'btn btn-danger pull-left', :method => :delete, :confirm => "Are you sure?"
           -if user.validated?
+            =link_to "Unvalidate", unvalidate_user_path(user), :class => 'btn btn-danger pull-left', :method => :put
             -if user.is_community_champion?
               =link_to "Un-champion".html_safe,toggle_champion_user_path(user), :class => "btn", :method => :put
             -else
